--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="hidden md:flex items-center gap-8 text-sm text-gray-600">
         <a href="#community" class="hover:text-black transition-colors">Community</a>
         <a href="#features" class="hover:text-black transition-colors">Features</a>
-        <a href="https://joecollective.com" class="hover:text-black transition-colors">For Coffee Shops</a>
+        <<a href="/for-coffee-shops/">For Coffee Shops</a> class="hover:text-black transition-colors">For Coffee Shops</a>
       </div>
       <a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" class="bg-black text-white px-5 py-2.5 rounded-full text-sm font-semibold hover:bg-gray-800 transition-colors flex items-center gap-2">
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
@@ -427,9 +427,9 @@
         <div>
           <h4 class="font-bold mb-4 text-black">For Coffee Shops</h4>
           <ul class="space-y-2 text-gray-500 text-sm">
-            <li><a href="https://joecollective.com" class="hover:text-black transition-colors">Join the Collective</a></li>
-            <li><a href="https://joecollective.com#platform" class="hover:text-black transition-colors">Platform</a></li>
-            <li><a href="https://joecollective.com#pricing" class="hover:text-black transition-colors">Pricing</a></li>
+            <li><a href="/for-coffee-shops/">For Coffee Shops</a> class="hover:text-black transition-colors">Join the Collective</a></li>
+            <li><a href="/for-coffee-shops/#platform">For Coffee Shops</a> class="hover:text-black transition-colors">Platform</a></li>
+            <li><a href="/for-coffee-shops/#pricing" class="hover:text-black transition-colors">Pricing</a></li>
             <li><a href="https://support.joe.coffee" class="hover:text-black transition-colors">Support</a></li>
           </ul>
         </div>
@@ -437,7 +437,7 @@
         <div>
           <h4 class="font-bold mb-4 text-black">Company</h4>
           <ul class="space-y-2 text-gray-500 text-sm">
-            <li><a href="https://joecollective.com#about" class="hover:text-black transition-colors">About</a></li>
+            <li><a href="/for-coffee-shops/#about" class="hover:text-black transition-colors">About</a></li>
             <li><a href="/blog" class="hover:text-black transition-colors">Blog</a></li>
             <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" class="hover:text-black transition-colors">Privacy</a></li>
             <li><a href="https://joe.coffee/merchant-tos/" class="hover:text-black transition-colors">Terms</a></li>
