--- a/index.html
+++ b/index.html
@@ -114,32 +114,10 @@
         </p>
       </div>
 
-      <!-- Instagram Grid - Simplified -->
-      <div class="grid grid-cols-2 md:grid-cols-4 gap-3 mb-8">
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-amber-600 to-orange-700 flex items-center justify-center">
-          <span class="text-6xl opacity-50">☕</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-pink-500 to-rose-600 flex items-center justify-center">
-          <span class="text-6xl opacity-50">🎉</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-emerald-500 to-teal-600 flex items-center justify-center">
-          <span class="text-6xl opacity-50">🎨</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-violet-500 to-purple-700 flex items-center justify-center">
-          <span class="text-6xl opacity-50">💜</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-amber-500 to-yellow-600 flex items-center justify-center">
-          <span class="text-6xl opacity-50">⭐</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-cyan-500 to-blue-600 flex items-center justify-center">
-          <span class="text-6xl opacity-50">🧊</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-red-500 to-rose-700 flex items-center justify-center">
-          <span class="text-6xl opacity-50">❤️</span>
-        </a>
-        <a href="https://www.instagram.com/joe_is_community/" target="_blank" class="relative aspect-square rounded-2xl overflow-hidden bg-gradient-to-br from-orange-500 to-amber-600 flex items-center justify-center">
-          <span class="text-6xl opacity-50">👏</span>
-        </a>
+      <!-- Elfsight Instagram Widget -->
+      <div class="bg-gray-900 rounded-2xl p-4 mb-8">
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+        <div class="elfsight-app-7da5bc77-6ca6-4f0a-8725-3ef72f65277b" data-elfsight-app-lazy></div>
       </div>
 
       <!-- Follow CTA -->
