--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#features" class="hover:text-black transition-colors">Features</a>
         <a href="/for-coffee-shops/" class="hover:text-black transition-colors">For Coffee Shops</a>
       </div>
-      <a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" class="bg-black text-white px-5 py-2.5 rounded-full text-sm font-semibold hover:bg-gray-800 transition-colors flex items-center gap-2">
+      <a href="https://get.joe.coffee" class="bg-black text-white px-5 py-2.5 rounded-full text-sm font-semibold hover:bg-gray-800 transition-colors flex items-center gap-2">
         <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
         Get the App
       </a>
@@ -59,19 +59,11 @@
         Order ahead from 500+ indie coffee shops, earn rewards that work everywhere, and discover your new favorite spot.
       </p>
 
-      <div class="flex flex-col sm:flex-row gap-4 justify-center mb-16">
-        <a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" class="group bg-black text-white px-8 py-4 rounded-2xl font-semibold text-lg hover:bg-gray-800 transition-all flex items-center justify-center gap-3">
-          <svg class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
-          </svg>
-          Download for iOS
+      <div class="flex justify-center mb-16">
+        <a href="https://get.joe.coffee" class="group bg-black text-white px-10 py-5 rounded-2xl font-semibold text-lg hover:bg-gray-800 transition-all flex items-center justify-center gap-3">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
+          Get the App
           <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
-        </a>
-        <a href="https://play.google.com/store/apps/details?id=com.joecoffee.app" class="group bg-white text-black px-8 py-4 rounded-2xl font-semibold text-lg hover:bg-gray-50 transition-all flex items-center justify-center gap-3 border-2 border-gray-200">
-          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M3 20.5v-17c0-.59.34-1.11.84-1.35l9.83 9.85-9.83 9.85c-.5-.24-.84-.76-.84-1.35zm13.81-5.38L6.05 21.17l8.28-8.28 2.48 2.23zm.75-4.24-2.48 2.23-8.28-8.28 10.76 6.05zm2.07 1.17-2.43-1.36-2.74 2.31 2.74 2.31 2.43-1.36c.52-.29.52-1.61 0-1.9z"/>
-          </svg>
-          Get on Android
         </a>
       </div>
 
@@ -215,18 +207,10 @@
       <h2 class="text-4xl md:text-6xl font-bold mb-6">Ready to skip the line?</h2>
       <p class="text-xl text-gray-400 mb-10 max-w-2xl mx-auto">Join thousands of coffee lovers supporting their local indie shops. Download joe and start earning rewards today.</p>
       
-      <div class="flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" class="bg-white text-black px-10 py-5 rounded-2xl font-semibold text-lg hover:bg-gray-100 transition-all flex items-center justify-center gap-3">
-          <svg class="w-8 h-8" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
-          </svg>
-          Download for iOS
-        </a>
-        <a href="https://play.google.com/store/apps/details?id=com.joecoffee.app" class="bg-white/10 text-white px-10 py-5 rounded-2xl font-semibold text-lg hover:bg-white/20 transition-all flex items-center justify-center gap-3 border border-white/20">
-          <svg class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M3 20.5v-17c0-.59.34-1.11.84-1.35l9.83 9.85-9.83 9.85c-.5-.24-.84-.76-.84-1.35zm13.81-5.38L6.05 21.17l8.28-8.28 2.48 2.23zm.75-4.24-2.48 2.23-8.28-8.28 10.76 6.05zm2.07 1.17-2.43-1.36-2.74 2.31 2.74 2.31 2.43-1.36c.52-.29.52-1.61 0-1.9z"/>
-          </svg>
-          Get on Android
+      <div class="flex justify-center">
+        <a href="https://get.joe.coffee" class="group bg-white text-black px-10 py-5 rounded-2xl font-semibold text-lg hover:bg-gray-100 transition-all flex items-center justify-center gap-3">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
+          Get the App
         </a>
       </div>
     </div>
@@ -249,7 +233,7 @@
         <div>
           <h4 class="font-bold mb-4 text-black">For Coffee Lovers</h4>
           <ul class="space-y-2 text-gray-500 text-sm">
-            <li><a href="https://apps.apple.com/us/app/joe-coffee-order-ahead/id1437558382" class="hover:text-black transition-colors">Download App</a></li>
+            <li><a href="https://get.joe.coffee" class="hover:text-black transition-colors">Download App</a></li>
             <li><a href="#" class="hover:text-black transition-colors">Find Shops</a></li>
             <li><a href="#" class="hover:text-black transition-colors">Rewards</a></li>
             <li><a href="#" class="hover:text-black transition-colors">Gift Cards</a></li>
