--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
           <ul class="space-y-2 text-gray-500 text-sm">
             <li><a href="/for-coffee-shops/#about" class="hover:text-black transition-colors">About</a></li>
             <li><a href="/blog/" class="hover:text-black transition-colors">Blog</a></li>
-            <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" class="hover:text-black transition-colors">Privacy</a></li>
+            <li><a href="/privacy/" class="hover:text-black transition-colors">Privacy</a></li>
+            <li><a href="/terms/" class="hover:text-black transition-colors">Terms</a></li>
             <li><a href="https://joe.coffee/merchant-tos/" class="hover:text-black transition-colors">Terms</a></li>
           </ul>
         </div>
