--- a/testimonials.html
+++ b/testimonials.html
@@ -176,7 +176,7 @@
   <!-- Navigation -->
   <nav class="fixed top-0 left-0 right-0 z-50 bg-white border-b border-gray-100 nav-blur" style="background-color: rgba(255,255,255,0.95);">
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-      <a href="/for-coffee-shops/" class="flex items-center">
+      <a href="/" class="flex items-center">
         <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" class="h-8">
       </a>
       
@@ -326,7 +326,8 @@
           <ul class="space-y-2 text-sm">
             <li><a href="/for-coffee-shops/#about" class="hover:text-white transition-colors">Mission & Values</a></li>
             <li><a href="https://joe.coffee/merchant-tos/" class="hover:text-white transition-colors">Merchant Terms</a></li>
-            <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" class="hover:text-white transition-colors">Privacy Policy</a></li>
+            <li><a href="/privacy/" class="hover:text-white transition-colors">Privacy Policy</a></li>
+            <li><a href="/terms/" class="hover:text-white transition-colors">Terms of Service</a></li>
           </ul>
         </div>
       </div>
