--- a/testimonials.html
+++ b/testimonials.html
@@ -325,7 +325,7 @@
           <h4 class="text-white font-semibold text-sm uppercase tracking-wider mb-4">Company</h4>
           <ul class="space-y-2 text-sm">
             <li><a href="/for-coffee-shops/#about" class="hover:text-white transition-colors">Mission & Values</a></li>
-            <li><a href="https://joe.coffee/merchant-tos/" class="hover:text-white transition-colors">Merchant Terms</a></li>
+            <li><a href="/merchant-terms/" class="hover:text-white transition-colors">Merchant Terms</a></li>
             <li><a href="/privacy/" class="hover:text-white transition-colors">Privacy Policy</a></li>
             <li><a href="/terms/" class="hover:text-white transition-colors">Terms of Service</a></li>
           </ul>
@@ -575,4 +575,4 @@
   </script>
 
 </body>
-</html>
+</html>v
