--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1639,6 +1639,44 @@
             font-size: 0.8rem;
         }
 
+                .footer-cities {
+            max-width: 1100px;
+            margin: 2.5rem auto 0;
+            padding-top: 2rem;
+            border-top: 1px solid rgba(255,255,255,0.1);
+        }
+
+        .footer-cities h4 {
+            color: var(--white);
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            margin-bottom: 1rem;
+        }
+
+        .footer-cities-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            gap: 0.5rem 1rem;
+        }
+
+        .footer-cities-grid a {
+            color: var(--gray-500);
+            text-decoration: none;
+            font-size: 0.85rem;
+            transition: color 0.2s;
+        }
+
+        .footer-cities-grid a:hover {
+            color: var(--white);
+        }
+
+        .footer-cities-grid a.view-all {
+            color: var(--white);
+            font-weight: 500;
+        }
+
         /* Responsive */
         @media (max-width: 1024px) {
             .products-grid { grid-template-columns: repeat(2, 1fr); }
