--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2473,8 +2473,7 @@
         </p>
     </section>
 
-    <!-- Footer -->
-    <footer>
+   <footer>
         <div class="footer-content">
             <div class="footer-brand">
                 <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
@@ -2483,16 +2482,16 @@
             <div class="footer-column">
                 <h4>For Shops</h4>
                 <ul>
-                    <li><a href="#platform">Platform</a></li>
-                    <li><a href="#loyalty">Loyalty Program</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#join">Join the Movement</a></li>
+                    <li><a href="/for-coffee-shops#platform">Platform</a></li>
+                    <li><a href="/for-coffee-shops#loyalty">Loyalty Program</a></li>
+                    <li><a href="/for-coffee-shops#pricing">Pricing</a></li>
+                    <li><a href="/for-coffee-shops#join">Join the Movement</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="/blog/" target="_blank">Industry Blog</a></li>
+                    <li><a href="/blog/">Industry Blog</a></li>
                     <li><a href="https://support.joe.coffee" target="_blank">Support & FAQs</a></li>
                     <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
                 </ul>
@@ -2500,12 +2499,33 @@
             <div class="footer-column">
                 <h4>Company</h4>
                 <ul>
-                    <li><a href="#about">Mission & Values</a></li>
-                    <li><a href="https://joe.coffee/merchant-tos/" target="_blank">Merchant Terms</a></li>
-                    <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" target="_blank">Privacy Policy</a></li>
+                    <li><a href="/for-coffee-shops#about">Mission & Values</a></li>
+                    <li><a href="/merchant-terms/">Merchant Terms</a></li>
+                    <li><a href="/privacy/">Privacy Policy</a></li>
+                    <li><a href="/terms/">Terms of Service</a></li>
                 </ul>
             </div>
         </div>
+        
+        <!-- City Links Section -->
+        <div class="footer-cities">
+            <h4>Coffee Shops by City</h4>
+            <div class="footer-cities-grid">
+                <a href="/cities/seattle/">Seattle</a>
+                <a href="/cities/tacoma/">Tacoma</a>
+                <a href="/cities/bellevue/">Bellevue</a>
+                <a href="/cities/kirkland/">Kirkland</a>
+                <a href="/cities/redmond/">Redmond</a>
+                <a href="/cities/bothell/">Bothell</a>
+                <a href="/cities/puyallup/">Puyallup</a>
+                <a href="/cities/olympia/">Olympia</a>
+                <a href="/cities/issaquah/">Issaquah</a>
+                <a href="/cities/lynnwood/">Lynnwood</a>
+                <a href="/cities/kent/">Kent</a>
+                <a href="/cities/" class="view-all">View All Cities →</a>
+            </div>
+        </div>
+        
         <div class="footer-bottom">
             © 2025 joe Coffee. All rights reserved. | Crafted, not corporate.
         </div>
