--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>For Coffee Shops | joe Coffee | Built by Coffee Shops, For Coffee Shops</title>
+    <title>joe collective | Built by Coffee Shops, For Coffee Shops</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
@@ -1639,10 +1639,11 @@
             font-size: 0.8rem;
         }
 
-                .footer-cities {
+        /* Footer City Links */
+        .footer-cities {
             max-width: 1100px;
-            margin: 2.5rem auto 0;
-            padding-top: 2rem;
+            margin: 2rem auto 0;
+            padding-top: 1.5rem;
             border-top: 1px solid rgba(255,255,255,0.1);
         }
 
@@ -1657,7 +1658,7 @@
 
         .footer-cities-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
             gap: 0.5rem 1rem;
         }
 
@@ -1843,11 +1844,11 @@
 
     <!-- Navigation -->
     <nav id="nav">
-        <a href="#" class="nav-logo">
+        <a href="/" class="nav-logo">
             <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
         </a>
         <ul class="nav-links">
-            <li><a href="/" target="_blank">For Coffee Lovers</a></li>
+            <li><a href="https://joe.coffee" target="_blank">For Coffee Lovers</a></li>
             <li><a href="#platform">Platform</a></li>
             <li><a href="#loyalty">Loyalty</a></li>
             <li><a href="#pricing">Pricing</a></li>
@@ -1856,9 +1857,9 @@
                 <span class="nav-dropdown-trigger">Resources</span>
                 <div class="nav-dropdown">
                     <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="/blog/" target="_blank">Industry Blog</a>
+                    <a href="https://blog.joe.coffee" target="_blank">Industry Blog</a>
                     <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="/testimonials/" target="_blank">Partner Stories</a>
+                    <a href="https://blog.joe.coffee/testimonials" target="_blank">Partner Stories</a>
                 </div>
             </li>
         </ul>
@@ -1877,7 +1878,7 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-menu-links">
-            <li><a href="/" target="_blank">For Coffee Lovers</a></li>
+            <li><a href="https://joe.coffee" target="_blank">For Coffee Lovers</a></li>
             <li><a href="#platform" class="mobile-nav-link">Platform</a></li>
             <li><a href="#loyalty" class="mobile-nav-link">Loyalty</a></li>
             <li><a href="#pricing" class="mobile-nav-link">Pricing</a></li>
@@ -1886,9 +1887,9 @@
                 <div class="mobile-dropdown-trigger" id="mobileResourcesTrigger">Resources</div>
                 <div class="mobile-dropdown" id="mobileResourcesDropdown">
                     <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="/blog/" target="_blank">Industry Blog</a>
+                    <a href="https://blog.joe.coffee" target="_blank">Industry Blog</a>
                     <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="/testimonials/" target="_blank">Partner Stories</a>
+                    <a href="https://blog.joe.coffee/testimonials" target="_blank">Partner Stories</a>
                 </div>
             </li>
         </ul>
@@ -1900,7 +1901,7 @@
     <!-- Hero -->
     <section class="hero" id="home">
         <video class="hero-video" autoplay muted loop playsinline>
-            <source src="/videos/hero-video.mp4" type="video/mp4">
+            <source src="hero-video.mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-bg"></div>
@@ -2464,7 +2465,7 @@
             </script>
 
             <p class="form-note">
-                Or email us directly at <a href="/cdn-cgi/l/email-protection#e695938585839595a68c8983c8858980808383"><span class="__cf_email__" data-cfemail="b4c7c1d7d7d1c7c7f4dedbd19ad7dbd2d2d1d1">[email&#160;protected]</span></a>
+                Or email us directly at <a href="/cdn-cgi/l/email-protection#493a3c2a2a2c3a3a0923262c672a262f2f2c2c"><span class="__cf_email__" data-cfemail="e291978181879191a2888d87cc818d84848787">[email&#160;protected]</span></a>
             </p>
         </div>
 
@@ -2473,7 +2474,8 @@
         </p>
     </section>
 
-   <footer>
+    <!-- Footer -->
+    <footer>
         <div class="footer-content">
             <div class="footer-brand">
                 <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
@@ -2482,16 +2484,16 @@
             <div class="footer-column">
                 <h4>For Shops</h4>
                 <ul>
-                    <li><a href="/for-coffee-shops#platform">Platform</a></li>
-                    <li><a href="/for-coffee-shops#loyalty">Loyalty Program</a></li>
-                    <li><a href="/for-coffee-shops#pricing">Pricing</a></li>
-                    <li><a href="/for-coffee-shops#join">Join the Movement</a></li>
+                    <li><a href="#platform">Platform</a></li>
+                    <li><a href="#loyalty">Loyalty Program</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#join">Join the Movement</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="/blog/">Industry Blog</a></li>
+                    <li><a href="https://blog.joe.coffee" target="_blank">Industry Blog</a></li>
                     <li><a href="https://support.joe.coffee" target="_blank">Support & FAQs</a></li>
                     <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
                 </ul>
@@ -2499,33 +2501,29 @@
             <div class="footer-column">
                 <h4>Company</h4>
                 <ul>
-                    <li><a href="/for-coffee-shops#about">Mission & Values</a></li>
-                    <li><a href="/merchant-terms/">Merchant Terms</a></li>
-                    <li><a href="/privacy/">Privacy Policy</a></li>
-                    <li><a href="/terms/">Terms of Service</a></li>
+                    <li><a href="#about">Mission & Values</a></li>
+                    <li><a href="https://joe.coffee/merchant-tos/" target="_blank">Merchant Terms</a></li>
+                    <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" target="_blank">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
-        
-        <!-- City Links Section -->
         <div class="footer-cities">
             <h4>Coffee Shops by City</h4>
             <div class="footer-cities-grid">
-                <a href="/cities/seattle/">Seattle</a>
-                <a href="/cities/tacoma/">Tacoma</a>
-                <a href="/cities/bellevue/">Bellevue</a>
-                <a href="/cities/kirkland/">Kirkland</a>
-                <a href="/cities/redmond/">Redmond</a>
-                <a href="/cities/bothell/">Bothell</a>
-                <a href="/cities/puyallup/">Puyallup</a>
-                <a href="/cities/olympia/">Olympia</a>
-                <a href="/cities/issaquah/">Issaquah</a>
-                <a href="/cities/lynnwood/">Lynnwood</a>
-                <a href="/cities/kent/">Kent</a>
+                <a href="/cities/seattle/">Coffee Shops in Seattle</a>
+                <a href="/cities/tacoma/">Coffee Shops in Tacoma</a>
+                <a href="/cities/bellevue/">Coffee Shops in Bellevue</a>
+                <a href="/cities/kirkland/">Coffee Shops in Kirkland</a>
+                <a href="/cities/redmond/">Coffee Shops in Redmond</a>
+                <a href="/cities/bothell/">Coffee Shops in Bothell</a>
+                <a href="/cities/puyallup/">Coffee Shops in Puyallup</a>
+                <a href="/cities/olympia/">Coffee Shops in Olympia</a>
+                <a href="/cities/issaquah/">Coffee Shops in Issaquah</a>
+                <a href="/cities/lynnwood/">Coffee Shops in Lynnwood</a>
+                <a href="/cities/kent/">Coffee Shops in Kent</a>
                 <a href="/cities/" class="view-all">View All Cities →</a>
             </div>
         </div>
-        
         <div class="footer-bottom">
             © 2025 joe Coffee. All rights reserved. | Crafted, not corporate.
         </div>
@@ -2632,12 +2630,4 @@
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
-                const target = document.querySelector(this.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({ behavior: 'smooth' });
-                }
-            });
-        });
-    </script>
-</body>
-</html>
+                const target =
