--- a/testimonials.html
+++ b/testimonials.html
@@ -307,10 +307,10 @@
         <div>
           <h4 class="text-white font-semibold text-sm uppercase tracking-wider mb-4">For Shops</h4>
           <ul class="space-y-2 text-sm">
-            <li><a href="/for-coffee-shops/#platform" class="hover:text-white transition-colors">Platform</a></li>
-            <li><a href="/for-coffee-shops/#loyalty" class="hover:text-white transition-colors">Loyalty Program</a></li>
-            <li><a href="/for-coffee-shops/#pricing" class="hover:text-white transition-colors">Pricing</a></li>
-            <li><a href="/for-coffee-shops/#join" class="hover:text-white transition-colors">Join the Movement</a></li>
+            <li><a href="/for-coffee-shops#platform" class="hover:text-white transition-colors">Platform</a></li>
+            <li><a href="/for-coffee-shops#loyalty" class="hover:text-white transition-colors">Loyalty Program</a></li>
+            <li><a href="/for-coffee-shops#pricing" class="hover:text-white transition-colors">Pricing</a></li>
+            <li><a href="/for-coffee-shops#join" class="hover:text-white transition-colors">Join the Movement</a></li>
           </ul>
         </div>
         <div>
@@ -324,13 +324,33 @@
         <div>
           <h4 class="text-white font-semibold text-sm uppercase tracking-wider mb-4">Company</h4>
           <ul class="space-y-2 text-sm">
-            <li><a href="/for-coffee-shops/#about" class="hover:text-white transition-colors">Mission & Values</a></li>
+            <li><a href="/for-coffee-shops#about" class="hover:text-white transition-colors">Mission & Values</a></li>
             <li><a href="/merchant-terms/" class="hover:text-white transition-colors">Merchant Terms</a></li>
             <li><a href="/privacy/" class="hover:text-white transition-colors">Privacy Policy</a></li>
             <li><a href="/terms/" class="hover:text-white transition-colors">Terms of Service</a></li>
           </ul>
         </div>
       </div>
+      
+      <!-- City Links -->
+      <div class="mb-8 pb-8 border-t border-gray-800 pt-8">
+        <h4 class="text-white font-semibold text-sm uppercase tracking-wider mb-4">Coffee Shops by City</h4>
+        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-2 text-sm">
+          <a href="/cities/seattle/" class="hover:text-white transition-colors">Coffee Shops in Seattle</a>
+          <a href="/cities/tacoma/" class="hover:text-white transition-colors">Coffee Shops in Tacoma</a>
+          <a href="/cities/bellevue/" class="hover:text-white transition-colors">Coffee Shops in Bellevue</a>
+          <a href="/cities/kirkland/" class="hover:text-white transition-colors">Coffee Shops in Kirkland</a>
+          <a href="/cities/redmond/" class="hover:text-white transition-colors">Coffee Shops in Redmond</a>
+          <a href="/cities/bothell/" class="hover:text-white transition-colors">Coffee Shops in Bothell</a>
+          <a href="/cities/puyallup/" class="hover:text-white transition-colors">Coffee Shops in Puyallup</a>
+          <a href="/cities/olympia/" class="hover:text-white transition-colors">Coffee Shops in Olympia</a>
+          <a href="/cities/issaquah/" class="hover:text-white transition-colors">Coffee Shops in Issaquah</a>
+          <a href="/cities/lynnwood/" class="hover:text-white transition-colors">Coffee Shops in Lynnwood</a>
+          <a href="/cities/kent/" class="hover:text-white transition-colors">Coffee Shops in Kent</a>
+          <a href="/cities/" class="text-white font-medium hover:underline">View All Cities →</a>
+        </div>
+      </div>
+      
       <div class="pt-8 border-t border-gray-800 text-center text-sm text-gray-500">
         © 2025 joe Coffee. All rights reserved. | Crafted, not corporate.
       </div>
