--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1646,7 +1646,6 @@
             padding-top: 1.5rem;
             border-top: 1px solid rgba(255,255,255,0.1);
         }
-
         .footer-cities h4 {
             color: var(--white);
             font-size: 0.8rem;
@@ -1655,28 +1654,19 @@
             letter-spacing: 0.1em;
             margin-bottom: 1rem;
         }
-
         .footer-cities-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
             gap: 0.5rem 1rem;
         }
-
         .footer-cities-grid a {
             color: var(--gray-500);
             text-decoration: none;
             font-size: 0.85rem;
             transition: color 0.2s;
         }
-
-        .footer-cities-grid a:hover {
-            color: var(--white);
-        }
-
-        .footer-cities-grid a.view-all {
-            color: var(--white);
-            font-weight: 500;
-        }
+        .footer-cities-grid a:hover { color: var(--white); }
+        .footer-cities-grid a.view-all { color: var(--white); font-weight: 500; }
 
         /* Responsive */
         @media (max-width: 1024px) {
@@ -1857,9 +1847,9 @@
                 <span class="nav-dropdown-trigger">Resources</span>
                 <div class="nav-dropdown">
                     <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="https://blog.joe.coffee" target="_blank">Industry Blog</a>
+                    <a href="/blog/" target="_blank">Industry Blog</a>
                     <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="https://blog.joe.coffee/testimonials" target="_blank">Partner Stories</a>
+                    <a href="/blog//testimonials" target="_blank">Partner Stories</a>
                 </div>
             </li>
         </ul>
@@ -1887,9 +1877,9 @@
                 <div class="mobile-dropdown-trigger" id="mobileResourcesTrigger">Resources</div>
                 <div class="mobile-dropdown" id="mobileResourcesDropdown">
                     <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="https://blog.joe.coffee" target="_blank">Industry Blog</a>
+                    <a href="/blog/" target="_blank">Industry Blog</a>
                     <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="https://blog.joe.coffee/testimonials" target="_blank">Partner Stories</a>
+                    <a href="/blog//testimonials" target="_blank">Partner Stories</a>
                 </div>
             </li>
         </ul>
@@ -2465,7 +2455,7 @@
             </script>
 
             <p class="form-note">
-                Or email us directly at <a href="/cdn-cgi/l/email-protection#493a3c2a2a2c3a3a0923262c672a262f2f2c2c"><span class="__cf_email__" data-cfemail="e291978181879191a2888d87cc818d84848787">[email&#160;protected]</span></a>
+                Or email us directly at <a href="/cdn-cgi/l/email-protection#9deee8fefef8eeeeddf7f2f8b3fef2fbfbf8f8"><span class="__cf_email__" data-cfemail="522127313137212112383d377c313d34343737">[email&#160;protected]</span></a>
             </p>
         </div>
 
@@ -2493,7 +2483,7 @@
             <div class="footer-column">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="https://blog.joe.coffee" target="_blank">Industry Blog</a></li>
+                    <li><a href="/blog/" target="_blank">Industry Blog</a></li>
                     <li><a href="https://support.joe.coffee" target="_blank">Support & FAQs</a></li>
                     <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
                 </ul>
