--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1799,7 +1799,10 @@
                 height: 24px;
             }
         }
-    </style>
+        .reveal {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
 </head>
 <body>
 
