--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -52,7 +52,7 @@
         }
 
         /* Scroll Reveal */
-        .reveal {
+        .reveal { opacity: 1 !important; transform: translateY(0) !important; } .reveal-old {
             opacity: 0;
             transform: translateY(30px);
             transition: all 0.6s cubic-bezier(0.16, 1, 0.3, 1);
@@ -1799,10 +1799,7 @@
                 height: 24px;
             }
         }
-        .reveal {
-    opacity: 1 !important;
-    transform: translateY(0) !important;
-}
+    </style>
 </head>
 <body>
 
@@ -2429,7 +2426,7 @@
             </script>
 
             <p class="form-note">
-                Or email us directly at <a href="/cdn-cgi/l/email-protection#cebdbbadadabbdbd8ea4a1abe0ada1a8a8abab"><span class="__cf_email__" data-cfemail="097a7c6a6a6c7a7a4963666c276a666f6f6c6c">[email&#160;protected]</span></a>
+                Or email us directly at <a href="/cdn-cgi/l/email-protection#99eaecfafafceaead9f3f6fcb7faf6fffffcfc"><span class="__cf_email__" data-cfemail="e192948282849292a18b8e84cf828e87878484">[email&#160;protected]</span></a>
             </p>
         </div>
 
