--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1799,6 +1799,35 @@
                 height: 24px;
             }
         }
+
+        /* Footer City Links */
+        .footer-cities {
+            max-width: 1100px;
+            margin: 2rem auto 0;
+            padding-top: 1.5rem;
+            border-top: 1px solid rgba(255,255,255,0.1);
+        }
+        .footer-cities h4 {
+            color: var(--white);
+            font-size: 0.8rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            margin-bottom: 1rem;
+        }
+        .footer-cities-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            gap: 0.5rem 1rem;
+        }
+        .footer-cities-grid a {
+            color: var(--gray-500);
+            text-decoration: none;
+            font-size: 0.85rem;
+            transition: color 0.2s;
+        }
+        .footer-cities-grid a:hover { color: var(--white); }
+        .footer-cities-grid a.view-all { color: var(--white); font-weight: 500; }
     </style>
 </head>
 <body>
@@ -2466,6 +2495,23 @@
                     <li><a href="https://joe.coffee/merchant-tos/" target="_blank">Merchant Terms</a></li>
                     <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" target="_blank">Privacy Policy</a></li>
                 </ul>
+            </div>
+        </div>
+                <div class="footer-cities">
+            <h4>Coffee Shops by City</h4>
+            <div class="footer-cities-grid">
+                <a href="/cities/seattle/">Coffee Shops in Seattle</a>
+                <a href="/cities/tacoma/">Coffee Shops in Tacoma</a>
+                <a href="/cities/bellevue/">Coffee Shops in Bellevue</a>
+                <a href="/cities/kirkland/">Coffee Shops in Kirkland</a>
+                <a href="/cities/redmond/">Coffee Shops in Redmond</a>
+                <a href="/cities/bothell/">Coffee Shops in Bothell</a>
+                <a href="/cities/puyallup/">Coffee Shops in Puyallup</a>
+                <a href="/cities/olympia/">Coffee Shops in Olympia</a>
+                <a href="/cities/issaquah/">Coffee Shops in Issaquah</a>
+                <a href="/cities/lynnwood/">Coffee Shops in Lynnwood</a>
+                <a href="/cities/kent/">Coffee Shops in Kent</a>
+                <a href="/cities/" class="view-all">View All Cities →</a>
             </div>
         </div>
         <div class="footer-bottom">
