--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -86,6 +86,15 @@
             backdrop-filter: blur(20px);
             box-shadow: 0 1px 0 rgba(0,0,0,0.08);
         }
+        
+        nav.scrolled .nav-links a {
+            color: var(--gray-900) !important;
+        }
+        
+        nav.scrolled .btn-primary {
+            background: var(--black);
+            color: var(--white);
+        }
 
         .nav-logo img {
             height: 28px;
@@ -1838,7 +1847,7 @@
             <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
         </a>
         <ul class="nav-links">
-            <li><a href="https://joe.coffee" target="_blank">For Coffee Lovers</a></li>
+            <li><a href="/">For Coffee Lovers</a></li>
             <li><a href="#platform">Platform</a></li>
             <li><a href="#loyalty">Loyalty</a></li>
             <li><a href="#pricing">Pricing</a></li>
@@ -1868,7 +1877,7 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-menu-links">
-            <li><a href="https://joe.coffee" target="_blank">For Coffee Lovers</a></li>
+            <li><a href="/">For Coffee Lovers</a></li>
             <li><a href="#platform" class="mobile-nav-link">Platform</a></li>
             <li><a href="#loyalty" class="mobile-nav-link">Loyalty</a></li>
             <li><a href="#pricing" class="mobile-nav-link">Pricing</a></li>
