--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2464,60 +2464,118 @@
         </p>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-brand">
-                <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
-                <p>Rewriting the story of commerce — pouring prosperity back into the hands of the people.</p>
-            </div>
-            <div class="footer-column">
-                <h4>For Shops</h4>
-                <ul>
-                    <li><a href="#platform">Platform</a></li>
-                    <li><a href="#loyalty">Loyalty Program</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#join">Join the Movement</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Resources</h4>
-                <ul>
-                    <li><a href="/blog/" target="_blank">Industry Blog</a></li>
-                    <li><a href="https://support.joe.coffee" target="_blank">Support & FAQs</a></li>
-                    <li><a href="https://manage.joe.coffee/login" target="_blank">Owner Login</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Company</h4>
-                <ul>
-                    <li><a href="#about">Mission & Values</a></li>
-                    <li><a href="https://joe.coffee/merchant-tos/" target="_blank">Merchant Terms</a></li>
-                    <li><a href="https://joe.coffee/terms-of-service-privacy-policy/" target="_blank">Privacy Policy</a></li>
-                </ul>
-            </div>
-        </div>
-                <div class="footer-cities">
-            <h4>Coffee Shops by City</h4>
-            <div class="footer-cities-grid">
-                <a href="/cities/seattle/">Coffee Shops in Seattle</a>
-                <a href="/cities/tacoma/">Coffee Shops in Tacoma</a>
-                <a href="/cities/bellevue/">Coffee Shops in Bellevue</a>
-                <a href="/cities/kirkland/">Coffee Shops in Kirkland</a>
-                <a href="/cities/redmond/">Coffee Shops in Redmond</a>
-                <a href="/cities/bothell/">Coffee Shops in Bothell</a>
-                <a href="/cities/puyallup/">Coffee Shops in Puyallup</a>
-                <a href="/cities/olympia/">Coffee Shops in Olympia</a>
-                <a href="/cities/issaquah/">Coffee Shops in Issaquah</a>
-                <a href="/cities/lynnwood/">Coffee Shops in Lynnwood</a>
-                <a href="/cities/kent/">Coffee Shops in Kent</a>
-                <a href="/cities/" class="view-all">View All Cities →</a>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            © 2025 joe Coffee. All rights reserved. | Crafted, not corporate.
-        </div>
-    </footer>
+    <!-- FOOTER with Top 20 Coffee Shop Cities -->
+<footer class="footer-cities">
+  <div class="footer-container">
+    <div class="footer-cities-section">
+      <h4 class="footer-cities-title">Coffee Shops by City</h4>
+      <div class="footer-cities-grid">
+        <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
+        <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
+        <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
+        <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
+        <a href="/locations/or/portland/">Coffee Shops in Portland</a>
+        <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
+        <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
+        <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
+        <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
+        <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
+        <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
+        <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
+        <a href="/locations/wa/kirkland/">Coffee Shops in Kirkland</a>
+        <a href="/locations/wa/bothell/">Coffee Shops in Bothell</a>
+        <a href="/locations/wa/chehalis/">Coffee Shops in Chehalis</a>
+        <a href="/locations/nv/reno/">Coffee Shops in Reno</a>
+        <a href="/locations/az/tucson/">Coffee Shops in Tucson</a>
+        <a href="/locations/dc/washington/">Coffee Shops in Washington</a>
+        <a href="/locations/wa/redmond/">Coffee Shops in Redmond</a>
+        <a href="/locations/wa/richland/">Coffee Shops in Richland</a>
+      </div>
+      <a href="/locations/" class="footer-view-all">View All Locations →</a>
+    </div>
+    
+    <div class="footer-bottom">
+      <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" class="footer-logo">
+      <span class="footer-copy">© 2025 joe Coffee. All rights reserved.</span>
+      <span class="footer-tagline">Crafted with ❤️ for indie coffee</span>
+    </div>
+  </div>
+</footer>
+
+<style>
+.footer-cities {
+  background: #fafafa;
+  border-top: 1px solid #e5e5e5;
+  padding: 3rem 1.5rem 2rem;
+}
+.footer-cities .footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.footer-cities-title {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 1.5rem;
+}
+.footer-cities-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: .5rem 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.footer-cities-grid a {
+  color: #525252;
+  text-decoration: none;
+  font-size: .875rem;
+  transition: color .2s;
+}
+.footer-cities-grid a:hover {
+  color: #000;
+}
+.footer-view-all {
+  display: inline-flex;
+  align-items: center;
+  gap: .25rem;
+  color: #000;
+  font-weight: 600;
+  font-size: .875rem;
+  text-decoration: none;
+  margin-bottom: 2rem;
+}
+.footer-view-all:hover {
+  text-decoration: underline;
+}
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 2rem;
+  border-top: 1px solid #e5e5e5;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.footer-logo {
+  height: 24px;
+}
+.footer-copy {
+  color: #a3a3a3;
+  font-size: .8rem;
+}
+.footer-tagline {
+  color: #737373;
+  font-size: .8rem;
+}
+@media (max-width: 768px) {
+  .footer-cities-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .footer-bottom {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+</style>
 
     <script>
         // Mobile menu functionality
