foot home and for shops dynamic

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/includes/footer.css">
     <style>
         :root {
             --black: #000000;
@@ -2464,43 +2465,8 @@
         </p>
     </section>
 
-    <!-- FOOTER with Top 20 Coffee Shop Cities -->
-<footer class="footer-cities">
-  <div class="footer-container">
-    <div class="footer-cities-section">
-      <h4 class="footer-cities-title">Coffee Shops by City</h4>
-      <div class="footer-cities-grid">
-        <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
-        <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
-        <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
-        <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
-        <a href="/locations/or/portland/">Coffee Shops in Portland</a>
-        <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
-        <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
-        <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
-        <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
-        <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
-        <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
-        <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
-        <a href="/locations/wa/kirkland/">Coffee Shops in Kirkland</a>
-        <a href="/locations/wa/bothell/">Coffee Shops in Bothell</a>
-        <a href="/locations/wa/chehalis/">Coffee Shops in Chehalis</a>
-        <a href="/locations/nv/reno/">Coffee Shops in Reno</a>
-        <a href="/locations/az/tucson/">Coffee Shops in Tucson</a>
-        <a href="/locations/dc/washington/">Coffee Shops in Washington</a>
-        <a href="/locations/wa/redmond/">Coffee Shops in Redmond</a>
-        <a href="/locations/wa/richland/">Coffee Shops in Richland</a>
-      </div>
-      <a href="/locations/" class="footer-view-all">View All Locations →</a>
-    </div>
-    
-    <div class="footer-bottom">
-      <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" class="footer-logo">
-      <span class="footer-copy">© 2025 joe Coffee. All rights reserved.</span>
-      <span class="footer-tagline">Crafted with ❤️ for indie coffee</span>
-    </div>
-  </div>
-</footer>
+    <footer id="site-footer"></footer>
+<script src="/includes/footer-loader.js"></script>
 
 <style>
 .footer-cities {
