--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1580,13 +1580,12 @@
         footer {
             background: var(--black);
             color: var(--gray-400);
-            padding: 0;
+            padding: 4rem 3rem 2rem;
         }
 
         .footer-content {
             max-width: 1100px;
             margin: 0 auto;
-            padding: 3rem;
             display: grid;
             grid-template-columns: 2fr 1fr 1fr 1fr;
             gap: 3rem;
@@ -1633,18 +1632,20 @@
 
         .footer-bottom {
             max-width: 1100px;
-            margin: 0 auto;
-            padding: 1.5rem 3rem;
+            margin: 2.5rem auto 0;
+            padding-top: 1.5rem;
             border-top: 1px solid rgba(255,255,255,0.1);
             text-align: center;
             font-size: 0.8rem;
         }
+
+
         /* City Links Section */
         .footer-cities {
             max-width: 1100px;
             margin: 0 auto;
-            padding: 2.5rem 3rem 2rem;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
+            padding: 2rem 3rem;
+            border-top: 1px solid rgba(255,255,255,0.1);
         }
 
         .footer-cities h4 {
@@ -1686,8 +1687,6 @@
         .footer-view-all:hover {
             text-decoration: underline;
         }
-
-
 
         /* Responsive */
         @media (max-width: 1024px) {
@@ -1841,9 +1840,14 @@
             .solutions-grid { grid-template-columns: 1fr; }
             .calc-inputs { grid-template-columns: 1fr; }
             .form-row { grid-template-columns: 1fr; }
-            .footer-content { grid-template-columns: 1fr; gap: 2rem; padding: 2rem 1.5rem; }
-            .footer-cities { padding: 2rem 1.5rem; }
-            .footer-cities-grid { grid-template-columns: 1fr 1fr; }
+            .footer-content { grid-template-columns: 1fr; gap: 2rem; }
+            .footer-cities {
+                padding: 2rem 1.5rem;
+            }
+            .footer-cities-grid {
+                grid-template-columns: 1fr 1fr;
+            }
+            
             
             /* Fix footer logo on mobile */
             .footer-brand img {
@@ -2478,7 +2482,7 @@
             </script>
 
             <p class="form-note">
-                Or email us directly at <a href="/cdn-cgi/l/email-protection#9feceafcfcfaececdff5f0fab1fcf0f9f9fafa"><span class="__cf_email__" data-cfemail="a3d0d6c0c0c6d0d0e3c9ccc68dc0ccc5c5c6c6">[email&#160;protected]</span></a>
+                Or email us directly at <a href="/cdn-cgi/l/email-protection#acdfd9cfcfc9dfdfecc6c3c982cfc3cacac9c9"><span class="__cf_email__" data-cfemail="1665637575736565567c797338757970707373">[email&#160;protected]</span></a>
             </p>
         </div>
 
@@ -2489,24 +2493,6 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-cities">
-            <h4>Coffee Shops by City</h4>
-            <div class="footer-cities-grid">
-                <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
-                <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
-                <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
-                <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
-                <a href="/locations/or/portland/">Coffee Shops in Portland</a>
-                <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
-                <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
-                <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
-                <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
-                <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
-                <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
-                <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
-            </div>
-            <a href="/locations/" class="footer-view-all">View All Locations →</a>
-        </div>
         <div class="footer-content">
             <div class="footer-brand">
                 <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe" style="filter: brightness(0) invert(1);">
@@ -2539,11 +2525,28 @@
                 </ul>
             </div>
         </div>
+        <div class="footer-cities">
+            <h4>Coffee Shops by City</h4>
+            <div class="footer-cities-grid">
+                <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
+                <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
+                <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
+                <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
+                <a href="/locations/or/portland/">Coffee Shops in Portland</a>
+                <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
+                <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
+                <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
+                <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
+                <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
+                <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
+                <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
+            </div>
+            <a href="/locations/" class="footer-view-all">View All Locations →</a>
+        </div>
         <div class="footer-bottom">
             © 2025 joe Coffee. All rights reserved. | Crafted with ❤️ for indie coffee
         </div>
     </footer>
-
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Mobile menu functionality
@@ -2646,4 +2649,4 @@
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
-                const target = 
+                const target =
