fixing for coffee shps

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -79,11 +79,12 @@
             justify-content: space-between;
             align-items: center;
             transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.98);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid var(--gray-200);
         }
 
         nav.scrolled {
-            background: rgba(255, 255, 255, 0.98);
-            backdrop-filter: blur(20px);
             box-shadow: 0 1px 0 rgba(0,0,0,0.08);
         }
 
@@ -109,9 +110,7 @@
             transition: color 0.2s;
         }
 
-        nav:not(.scrolled) .nav-links a {
-            color: var(--white);
-        }
+
 
         .nav-links a:hover {
             color: var(--joe-gold);
@@ -129,9 +128,7 @@
             transition: color 0.2s;
         }
 
-        nav:not(.scrolled) .nav-dropdown-trigger {
-            color: var(--white);
-        }
+
 
         .nav-dropdown-trigger:hover {
             color: var(--joe-gold);
@@ -1865,7 +1862,7 @@
             <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
         </a>
         <ul class="nav-links">
-            <li><a href="https://joe.coffee" target="_blank">For Coffee Lovers</a></li>
+            <li><a href="/">For Coffee Lovers</a></li>
             <li><a href="#platform">Platform</a></li>
             <li><a href="#loyalty">Loyalty</a></li>
             <li><a href="#pricing">Pricing</a></li>
@@ -1874,9 +1871,9 @@
                 <span class="nav-dropdown-trigger">Resources</span>
                 <div class="nav-dropdown">
                     <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="https://blog.joe.coffee" target="_blank">Industry Blog</a>
+                    <a href="/blog/">Industry Blog</a>
                     <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="https://blog.joe.coffee/testimonials" target="_blank">Partner Stories</a>
+                    <a href="/testimonials/">Partner Stories</a>
                 </div>
             </li>
         </ul>
@@ -1895,7 +1892,7 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <ul class="mobile-menu-links">
-            <li><a href="https://joe.coffee" target="_blank">For Coffee Lovers</a></li>
+            <li><a href="/">For Coffee Lovers</a></li>
             <li><a href="#platform" class="mobile-nav-link">Platform</a></li>
             <li><a href="#loyalty" class="mobile-nav-link">Loyalty</a></li>
             <li><a href="#pricing" class="mobile-nav-link">Pricing</a></li>
@@ -1904,9 +1901,9 @@
                 <div class="mobile-dropdown-trigger" id="mobileResourcesTrigger">Resources</div>
                 <div class="mobile-dropdown" id="mobileResourcesDropdown">
                     <a href="https://support.joe.coffee" target="_blank">Support & FAQs</a>
-                    <a href="https://blog.joe.coffee" target="_blank">Industry Blog</a>
+                    <a href="/blog/">Industry Blog</a>
                     <a href="https://joe-partner-community.circle.so" target="_blank">Community Hub</a>
-                    <a href="https://blog.joe.coffee/testimonials" target="_blank">Partner Stories</a>
+                    <a href="/testimonials/">Partner Stories</a>
                 </div>
             </li>
         </ul>
@@ -2649,4 +2646,4 @@
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
-                const target =
+                const target = 
