--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -1915,7 +1915,7 @@
     <!-- Hero -->
     <section class="hero" id="home">
         <video class="hero-video" autoplay muted loop playsinline>
-            <source src="hero-video.mp4" type="video/mp4">
+            <source src="/videos/hero-video.mp4" type="video/mp4">
         </video>
         <div class="hero-overlay"></div>
         <div class="hero-bg"></div>
