--- a/testimonials.html
+++ b/testimonials.html
@@ -118,7 +118,7 @@
 
         .hero-stat-label {
             font-size: 0.875rem;
-            color: var(--gray-500);
+            color: #525252;
         }
 
         /* Testimonials Grid */
@@ -191,7 +191,7 @@
 
         .testimonial-source {
             font-size: 0.8rem;
-            color: var(--gray-500);
+            color: #525252;
         }
 
         /* Shop Owner Section */
@@ -208,7 +208,7 @@
         /* CTA */
         .cta {
             background: var(--black);
-            color: var(--white);
+            color: var(--gray-900);
             padding: 5rem 2rem;
             text-align: center;
         }
@@ -247,7 +247,7 @@
 
         .btn-cta-secondary {
             background: rgba(255,255,255,0.1);
-            color: var(--white);
+            color: var(--gray-900);
             padding: 1rem 2rem;
             border-radius: 9999px;
             font-weight: 600;
@@ -257,8 +257,8 @@
 
         /* Footer */
         footer {
-            background: var(--black);
-            color: var(--gray-400);
+            background: #F5F1E8;
+            color: var(--gray-900);
             padding: 0;
         }
 
@@ -266,11 +266,11 @@
             max-width: 1100px;
             margin: 0 auto;
             padding: 2.5rem 3rem 2rem;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
+            border-bottom: 1px solid #E5E5E5;
         }
 
         .footer-cities h4 {
-            color: var(--white);
+            color: var(--gray-900);
             font-size: 0.8rem;
             font-weight: 600;
             text-transform: uppercase;
@@ -286,18 +286,18 @@
         }
 
         .footer-cities-grid a {
-            color: var(--gray-500);
+            color: #525252;
             text-decoration: none;
             font-size: 0.85rem;
             transition: color 0.2s;
         }
 
-        .footer-cities-grid a:hover { color: var(--white); }
+        .footer-cities-grid a:hover { color: var(--gray-900); }
 
         .footer-view-all {
             display: inline-flex;
             align-items: center;
-            color: var(--white);
+            color: var(--gray-900);
             font-weight: 600;
             font-size: 0.85rem;
             text-decoration: none;
@@ -317,17 +317,17 @@
         .footer-brand img {
             height: 24px;
             margin-bottom: 1rem;
-            filter: brightness(0) invert(1);
+            
         }
 
         .footer-brand p {
             font-size: 0.85rem;
             line-height: 1.6;
-            color: var(--gray-500);
+            color: #525252;
         }
 
         .footer-column h4 {
-            color: var(--white);
+            color: var(--gray-900);
             font-size: 0.8rem;
             font-weight: 600;
             text-transform: uppercase;
@@ -339,19 +339,19 @@
         .footer-column li { margin-bottom: 0.5rem; }
 
         .footer-column a {
-            color: var(--gray-500);
+            color: #525252;
             text-decoration: none;
             font-size: 0.85rem;
             transition: color 0.2s;
         }
 
-        .footer-column a:hover { color: var(--white); }
+        .footer-column a:hover { color: var(--gray-900); }
 
         .footer-bottom {
             max-width: 1100px;
             margin: 0 auto;
             padding: 1.5rem 3rem;
-            border-top: 1px solid rgba(255,255,255,0.1);
+            border-top: 1px solid #E5E5E5;
             text-align: center;
             font-size: 0.8rem;
         }
