--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2653,3 +2653,12 @@
             anchor.addEventListener('click', function(e) {
                 e.preventDefault();
                 const target =
+ document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({ behavior: 'smooth' });
+                }
+            });
+        });
+    </script>
+</body>
+</html>
