--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2522,8 +2522,9 @@
                 <ul style="list-style: none; padding: 0; margin: 0;">
                     <li style="margin-bottom: 0.5rem;"><a href="#about" style="color: #525252; text-decoration: none; font-size: 0.85rem;">About</a></li>
                     <li style="margin-bottom: 0.5rem;"><a href="/blog/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Blog</a></li>
-                    <li style="margin-bottom: 0.5rem;"><a href="/privacy/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Privacy</a></li>
-                    <li style="margin-bottom: 0.5rem;"><a href="/terms/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Terms</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/terms/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Terms and Conditions</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/privacy/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Privacy Policy</a></li>
+                    <li style="margin-bottom: 0.5rem;"><a href="/merchant-terms/" style="color: #525252; text-decoration: none; font-size: 0.85rem;">Merchant Terms of Service</a></li>
                 </ul>
             </div>
         </div>
