--- a/testimonials.html
+++ b/testimonials.html
@@ -530,24 +530,6 @@
     </section>
 
     <footer>
-        <div class="footer-cities">
-            <h4>Coffee Shops by City</h4>
-            <div class="footer-cities-grid">
-                <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
-                <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
-                <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
-                <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
-                <a href="/locations/or/portland/">Coffee Shops in Portland</a>
-                <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
-                <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
-                <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
-                <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
-                <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
-                <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
-                <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
-            </div>
-            <a href="/locations/" class="footer-view-all">View All Locations →</a>
-        </div>
         <div class="footer-content">
             <div class="footer-brand">
                 <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
@@ -574,11 +556,29 @@
                 <h4>Company</h4>
                 <ul>
                     <li><a href="/for-coffee-shops/#about">Mission & Values</a></li>
-                    <li><a href="/merchant-terms/">Merchant Terms</a></li>
+                    <li><a href="/terms/">Terms and Conditions</a></li>
                     <li><a href="/privacy/">Privacy Policy</a></li>
-                    <li><a href="/terms/">Terms of Service</a></li>
+                    <li><a href="/merchant-terms/">Merchant Terms of Service</a></li>
                 </ul>
             </div>
+        </div>
+        <div class="footer-cities">
+            <h4>Coffee Shops by City</h4>
+            <div class="footer-cities-grid">
+                <a href="/locations/wa/seattle/">Coffee Shops in Seattle</a>
+                <a href="/locations/wa/spokane/">Coffee Shops in Spokane</a>
+                <a href="/locations/il/chicago/">Coffee Shops in Chicago</a>
+                <a href="/locations/wa/tacoma/">Coffee Shops in Tacoma</a>
+                <a href="/locations/or/portland/">Coffee Shops in Portland</a>
+                <a href="/locations/ca/los-angeles/">Coffee Shops in Los Angeles</a>
+                <a href="/locations/wa/puyallup/">Coffee Shops in Puyallup</a>
+                <a href="/locations/tx/san-antonio/">Coffee Shops in San Antonio</a>
+                <a href="/locations/wa/spokane-valley/">Coffee Shops in Spokane Valley</a>
+                <a href="/locations/id/coeur-dalene/">Coffee Shops in Coeur d'Alene</a>
+                <a href="/locations/wa/everett/">Coffee Shops in Everett</a>
+                <a href="/locations/wa/centralia/">Coffee Shops in Centralia</a>
+            </div>
+            <a href="/locations/" class="footer-view-all">View All Locations →</a>
         </div>
         <div class="footer-bottom">
             © 2025 joe Coffee. All rights reserved. | Crafted with ❤️ for indie coffee
