--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -89,7 +89,7 @@
         }
 
         .nav-logo img {
-            height: 28px;
+            height: 56px;
         }
 
         .nav-links {
@@ -1858,7 +1858,7 @@
 
     <!-- Navigation -->
     <nav id="nav">
-        <a href="#" class="nav-logo">
+        <a href="/" class="nav-logo">
             <img src="https://4591743.fs1.hubspotusercontent-na1.net/hubfs/4591743/Black.png" alt="joe">
         </a>
         <ul class="nav-links">
