--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2089,6 +2089,11 @@
             <h4>The Power of Integration</h4>
             <p>Each product is powerful alone. But when Coffee OS connects everything — POS, Mobile App, Loyalty, Banking, Payroll, Marketing — you unlock capabilities that <strong style="color: var(--joe-gold);">no competitor can match</strong>.</p>
         </div>
+        <div style="text-align: center; margin-top: 3rem;">
+            <a href="/point-of-sale-for-coffee-shops/" style="display: inline-block; background: #1a1a1a; color: #fff; padding: 1rem 2rem; border-radius: 50px; text-decoration: none; font-weight: 600;">
+            Explore the Full Platform →
+            </a>
+        </div>
     </section>
 
     <!-- Collective Power -->
