button nav fix for pricing

--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2286,18 +2286,10 @@
       </div>
 
       <!-- CTA -->
-      <a href="#join" style="display: block; width: 100%; background: #fff; color: #1a1a1a; text-align: center; padding: 1rem; border-radius: 50px; font-weight: 600; text-decoration: none; font-size: 1rem;">
-        Join the Collective
-      </a>
-    </div>
-
-    <!-- Link to detailed pricing -->
-    <div style="text-align: center; margin-top: 2rem;">
-      <a href="/pricing/" style="color: #1a1a1a; font-weight: 500; text-decoration: none; border-bottom: 1px solid #1a1a1a;">
+      <a href="/pricing/" style="display: block; width: 100%; background: #fff; color: #1a1a1a; text-align: center; padding: 1rem; border-radius: 50px; font-weight: 600; text-decoration: none; font-size: 1rem;">
         See how we compare to Square, Toast & punch cards →
       </a>
     </div>
-
   </div>
 </section>
 
