--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -2287,7 +2287,7 @@
 
       <!-- CTA -->
       <a href="/pricing/" style="display: block; width: 100%; background: #fff; color: #1a1a1a; text-align: center; padding: 1rem; border-radius: 50px; font-weight: 600; text-decoration: none; font-size: 1rem;">
-        See how we compare to Square, Toast & punch cards →
+        See how we compare to Square →
       </a>
     </div>
   </div>
